@@ -1,3 +1,9 @@
+TAG: qcreports_db-6-0-0-15
+DATE: 08/25/2015
+STAFF: lec
+CHANGES:
+1) TR112083/10592/authors/title
+
 TAG: qcreports_db-6-0-0-14
 TAG: qcreports_db-6-0-0-13
 TAG: qcreports_db-6-0-0-12
